--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Bookshelf Apps</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header class="head_bar">
@@ -82,6 +82,6 @@
     </section>
 </main>
 
-<script src="next.js"></script>
+<script src="script/next.js"></script>
 </body>
 </html>
